--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -24,6 +24,7 @@
     background-color: rgba(0, 0, 0, 0.3);
     padding: 10px;
     border-radius: 10px;
+    text-align: center;
 }
 
 .aboutDesc {
