--- a/src/components/HeaderSimple/HeaderSimple.module.css
+++ b/src/components/HeaderSimple/HeaderSimple.module.css
@@ -3,8 +3,7 @@
     border-bottom: 1px solid var(--mantine-color-gray-3);
     width: 100%;
     position: fixed;
-    /* background-color: var(--mantine-color-body); */
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: var(--mantine-header-bg-color);
     z-index: 999;
 }
 
@@ -30,6 +29,20 @@
     background-color: var(--mantine-color-gray-0);
 }
 
+.avatarContainer {
+    display: flex;
+    align-items: center;
+}
+
+.avatarContainer>b {
+    margin-left: 8px;
+    color: var(--mantine-color-gray-7);
+}
+
+.drawer {
+    padding-top: calc(56px + 8px);
+}
+
 /* Aktif saat dark mode */
 [data-mantine-color-scheme="dark"] .link {
     color: var(--mantine-color-dark-0);
@@ -43,18 +56,4 @@
 .link[data-active] {
     background-color: var(--mantine-color-blue-filled);
     color: var(--mantine-color-white);
-}
-
-.avatarContainer {
-    display: flex;
-    align-items: center;
-}
-
-.avatarContainer>b {
-    margin-left: 8px;
-    color: var(--mantine-color-gray-7);
-}
-
-.drawer {
-    padding-top: calc(56px + 8px);
 }
