--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -29,7 +29,7 @@
 /* projects */
 .projects {
     padding-top: calc(56px + 16px);
-    padding-bottom: calc(56px / 2);
+    padding-bottom: calc(56px * 2);
     width: 100%;
     display: flex;
     flex-direction: column;
