--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,7 +1,7 @@
 .skillsContainer {
     width: 100%;
     padding-top: 56px;
-    padding-bottom: calc(56px / 2);
+    padding-bottom: calc(56px * 2);
     display: flex;
     flex-direction: column;
     align-items: center;
